# katu

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  default.toml  emcee_analyzer.py  emcee_wrapper.py  metadata_mcmc.py  multinest_analyzer.py  multinest_wrapper.py  plot_bands.py  plot_light_curve.py  plot_sed.py  plot_timescales.py
configs/tests/: distributions.toml  electron_acceleration.toml  electron_cooling.toml  tests_hummer.toml
doc/: FAQ_Katu.md  FAQ_emcee.md  FAQ_multinest.md  FAQ_wrappers.md  multinest_notes.txt
emcee_wrapper_utils/: obs_data.py  utils_shell_injection.py  utils_shell_steady_state.py  utils_sphere_injection.py  utils_sphere_steady_state.py
examples/: CMakeLists.txt  example_data.c  example_graphics.c  example_simple.c  example_spheres.c  example_wrapper.c  test_hummer.c
plot_utils/: plot_electrons.plt  plot_electrons.py  plot_photons.plt  plot_photons.py  plot_protons.plt  plot_protons.py
src/: CMakeLists.txt  acceleration.c  acceleration.h  bethe_heitler.c  bethe_heitler.h  bethe_heitler_kelner_aharonian.c  bethe_heitler_kelner_aharonian.h  config.c  config.h  constants.h  decay.c  decay.h  decay_and_escape.c  decay_and_escape.h  distribution.c  distribution.h  escape.c  escape.h  escape_and_decay.c  escape_and_decay.h  inverse_compton.c  inverse_compton.h  muon_decay.c  muon_decay.h  pair_annihilation.c  pair_annihilation.h  pair_production.c  pair_production.h  pion_decay.c  pion_decay.h  pion_production.c  pion_production.h  population.c  population.h  state.c  state.h  state_step.c  state_step.h  state_step_common.c  state_step_common.h  (+3 more)
src/utils/: tpool.c  tpool.h
tables/: CMakeLists.txt  generate_table_BH_ka.c
utils/: emcee_utils.py  general_utils.py  multinest_analyzer_utils.py  utils_shell_injection.py
wrapper_utils/: analyzer_utils.py  general_utils.py  multinest_notes.txt
